# Server

./: Cargo.toml
src/: data.rs  error.rs  hash.rs  main.rs
src/database/: accounts.rs  mod.rs  rooms.rs
src/endpoints/: account.rs  data_set.rs  mod.rs  session.rs
src/messages/: direct_request.rs  login.rs  mod.rs
